# ICCBot

./: .env.example  ARCHITECTURE.md  PROJECT_PLAN.md  README.md  RULES.md  pyproject.toml
scripts/: fetch_eurusd_m15.py  run_backtest.py  run_signal.py  run_signal_loop.py
src/: __init__.py
src/app/: __init__.py  main.py
src/backtest/: __init__.py  engine.py  filters.py  metrics.py  velocity_engine.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  market_data.py  mt5_client.py
src/execution/: __init__.py  models.py  mt5_executor.py
src/risk/: __init__.py  manager.py  sizing.py
src/strategies/: __init__.py  icc_strategy.py  models.py  velocity_indicators.py  velocity_strategy.py
src/utils/: __init__.py  logging.py  time.py
tests/: __init__.py  test_app_main.py  test_backtest_engine.py  test_backtest_metrics.py  test_backtest_velocity_engine.py  test_config_settings.py  test_data_market_data.py  test_data_mt5_client.py  test_risk_manager.py  test_scripts_run_signal.py  test_scripts_run_signal_loop.py  test_smoke_imports.py  test_strategies_icc_strategy.py  test_strategies_velocity_indicators.py  test_strategies_velocity_strategy.py
