[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iccbot"
version = "0.1.0"
description = "Rule-based ICC trading bot foundation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "MetaTrader5",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
